# RayTracer

./: CMakeLists.txt  main.cpp
CanvasFiles/: canvas.cpp  canvas.h  color.cpp  color.h  colorOps.cpp  colorOps.h
CoordFiles/: coord.h  coordOps.cpp  coordOps.h  matrix.cpp  matrix.h  matrixOps.cpp  matrixOps.h  point.cpp  point.h  vec.cpp  vec.h
SceneFiles/RayFiles/: computation.cpp  computation.h  hitTracker.h  intersection.cpp  intersection.h  pointLight.cpp  pointLight.h  ray.cpp  ray.h  rayOps.cpp  rayOps.h
SceneFiles/Shapes/: material.cpp  material.h  plane.cpp  plane.h  shape.h  sphere.cpp  sphere.h
SceneFiles/WorldFiles/: camera.cpp  camera.h  world.cpp  world.h  worldOps.cpp  worldOps.h
SceneFiles/patternFiles/: blendedPattern.cpp  blendedPattern.h  checkers.cpp  checkers.h  gradient.cpp  gradient.h  pattern.h  patternOps.cpp  patternOps.h  ring.cpp  ring.h  stripes.cpp  stripes.h
